@@ -1,3 +1,9 @@
+2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>
+
+	* tcl.m4: Correct compiler/linker flags
+	for threaded builds on OpenBSD.
+	* configure: (regenerated).
+
 2010-02-17  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/tkMenu.c: Defer TkMenuOptionTables cleanup
